[package]
name = "litesite"
version = "1.3.1"
edition = "2021"
license = "ISC"

[dependencies]
anyhow = "1"
brotli = "8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dotenvy = "0.15"
flate2 = "1"
live-server = "0.11"
minify-html = "0.18"
regex = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
walkdir = "2"
zstd = "0.13"
